--- a/app/views/users/index.html.erb
+++ b/app/views/users/index.html.erb
@@ -11,8 +11,7 @@
           <div class="itemdata"></div>
           <div class="media-vertical media-thumb">
               <figure class="media-object">
-                <div class="image-name"><%= image_name = farmer.avatar %></div>
-                <%= link_to image_tag(image_name), user_path(farmer) %>
+                <%= link_to image_tag(avatar_profile(farmer)), user_path(farmer) %>
                 <figcaption class="media-caption"><b><%= farmer.name %>さん</b>
                 </figcaption>
               </figure>
