--- a/app/views/posts/index.html.erb
+++ b/app/views/posts/index.html.erb
@@ -8,7 +8,7 @@
     <ul class="articlelist-list">
       <% @posts.each do |post| %>
         <li class="article-new">
-          <div class="image-name"><%= image_name = post.image %></div>
+          <div class="image-name"><%= image_name = post.image.url %></div>
           <%= link_to image_tag(image_name), "#" %>
           <h2 class="articlelist-title">
             <strong><%= post.title %></strong>
