--- a/app/views/products/index.html.erb
+++ b/app/views/products/index.html.erb
@@ -11,7 +11,7 @@
           <div class="itemdata"></div>
           <div class="media-vertical media-thumb">
               <figure class="media-object">
-                <div class="image-name"><%= image_name = product.image %></div>
+                <div class="image-name"><%= image_name = product.image.url %></div>
                 <%= link_to image_tag(image_name), product_path(product) %>
                 <figcaption class="media-caption"><b><%= product.name %></b>
                 </figcaption>
