--- a/app/views/products/show.html.erb
+++ b/app/views/products/show.html.erb
@@ -3,7 +3,7 @@
   <header class="area-header">
     <div class="media-vertical media-thumb">
       <figure class="media-object-detail">
-        <div class="image-name"><%= image_name = @product.image %></div>
+        <div class="image-name"><%= image_name = @product.image.url %></div>
         <%= image_tag(image_name) %>
         <h1 class="product-name center"><%= @product.name %></h1>
         </figcaption>
