--- a/app/views/users/show.html.erb
+++ b/app/views/users/show.html.erb
@@ -43,7 +43,7 @@
 
     <div class="col-lg-9 col-md-9 col-sm-8 col-xs-12 user-right">
       <hr class="resposive">
-      <h4><%= @user.name %>'s posts</h4>
+      <h4><strong><%= @user.name %></strong><%= t "user.list_posts" %></h4>
       <hr class="normal">
       <% @posts.each do |post| %>
         <%= render "pages/mini_home_page",  post: post %>
