--- a/app/views/users/index.html.erb
+++ b/app/views/users/index.html.erb
@@ -6,18 +6,7 @@
 <div class="area-contents section js-tab-content tab-content" id="cropstab">
   <ul class="row3 media-list crops-list">
     <% @farmers.each do |farmer| %>
-      <li class="col">
-        <a name="geTrack" class="fapp_contractField_crops" id="3" href="/farm/app/contractField/crops/002001/">
-          <div class="itemdata"></div>
-          <div class="media-vertical media-thumb">
-              <figure class="media-object">
-                <%= link_to image_tag(avatar_profile(farmer)), user_path(farmer) %>
-                <figcaption class="media-caption"><b><%= farmer.name %>さん</b>
-                </figcaption>
-              </figure>
-          </div>
-        </a>
-      </li>
+      <%= render "users/user",  farmer: farmer %>
     <% end %>
     <%= will_paginate @farmers, renderer: BootstrapPagination::Rails %>
   </ul>
