--- a/app/views/products/index.html.erb
+++ b/app/views/products/index.html.erb
@@ -6,19 +6,7 @@
 <div class="area-contents section js-tab-content tab-content" id="cropstab">
   <ul class="row3 media-list crops-list">
     <% @products.each do |product| %>
-      <li class="col">
-        <a name="geTrack" class="fapp_contractField_crops" id="3" href="/farm/app/contractField/crops/002001/">
-          <div class="itemdata"></div>
-          <div class="media-vertical media-thumb">
-              <figure class="media-object">
-                <div class="image-name"><%= image_name = product.image.url %></div>
-                <%= link_to image_tag(image_name), product_path(product) %>
-                <figcaption class="media-caption"><b><%= product.name %></b>
-                </figcaption>
-              </figure>
-          </div>
-        </a>
-      </li>
+      <%= render "products/product",  product: product %>
     <% end %>
     <%= will_paginate @products, renderer: BootstrapPagination::Rails %>
   </ul>
