--- a/app/views/pages/_mini_home_page.html.erb
+++ b/app/views/pages/_mini_home_page.html.erb
@@ -1,7 +1,7 @@
 <div class="w3-container w3-white w3-margin w3-padding-large">
   <div class="w3-center">
     <h3><%= post.title %></h3>
-    <h5><%= post.user.name %>さん、<span class="w3-opacity"><%= post.created_at%></span></h5>
+    <h5><strong><%= post.user.name %></strong>さん、<span class="w3-opacity"><%= post.created_at%></span></h5>
   </div>
 
   <div class="w3-justify">
