--- a/app/views/pages/_small_pack_new.html.erb
+++ b/app/views/pages/_small_pack_new.html.erb
@@ -2,7 +2,7 @@
   <!-- main 1 -->
   <div class="item">
     <div class="inner">
-      <a href="https://agriculture.rakuten.co.jp/farm/app/contractField/crops/062001/farmers/2189/?l-id=top-small_pakchoi-tobushin">
+      <a href="#">
         <div class="item-separate-1">
           <div class="cropsImg">
             <img src="https://agriculture.rakuten.co.jp/farm/assets/crops/img/003/002_1242x702.jpg" alt="野菜炒めや中華料理に「広東ハクサイ(パクチョイ)」">
@@ -34,7 +34,7 @@
         </div>
       </a>
       <div class="optionLink">
-        <a href="https://agriculture.rakuten.co.jp/farm/app/contractField/crops/062001/farmers/2021/?l-id=top-small-option_pakchoi-tobushin">通常：2,100円/8袋前後はこちら＞</a>
+        <a href="#">通常：2,100円/8袋前後はこちら＞</a>
       </div>
     </div>
   </div>
@@ -42,7 +42,7 @@
   <!-- main2 -->
   <div class="item">
     <div class="inner">
-      <a href="https://agriculture.rakuten.co.jp/farm/app/contractField/crops/022001/farmers/2185/?l-id=top-small_broccoli-abe">
+      <a href="#">
         <div class="item-separate-1">
           <div class="cropsImg">
             <img src="https://agriculture.rakuten.co.jp/farm/assets/crops/img/022/001_1242x702.jpg" alt="農薬、化学肥料不使用で育てる「ブロッコリー」">
@@ -74,7 +74,7 @@
         </div>
       </a>
       <div class="optionLink">
-        <a href="https://agriculture.rakuten.co.jp/farm/app/contractField/crops/022001/farmers/2184/?l-id=top-small-option_broccoli-abe">通常：1,940円/5本前後はこちら＞</a>
+        <a href="#">通常：1,940円/5本前後はこちら＞</a>
       </div>
     </div>
   </div>
@@ -82,7 +82,7 @@
   <!-- main3 -->
   <div class="item option-premium">
     <div class="inner">
-      <a href="https://agriculture.rakuten.co.jp/farm/app/contractField/crops/012011/farmers/2186/?l-id=top-small_little-carrot-nagasaka">
+      <a href="#">
         <div class="item-separate-1">
           <div class="cropsImg">
             <img src="https://agriculture.rakuten.co.jp/farm/assets/crops/img/012/002_1242x702.jpg" alt="皮ごと生でポリポリ甘い「ミニニンジン」">
@@ -116,7 +116,7 @@
         </div>
       </a>
       <div class="optionLink">
-        <a href="https://agriculture.rakuten.co.jp/farm/app/contractField/crops/012011/farmers/2180/?l-id=top-small-option_little-carrot-nagasaka">通常：2,700円/8袋前後はこちら＞</a>
+        <a href="#">通常：2,700円/8袋前後はこちら＞</a>
       </div>
     </div>
   </div>
@@ -124,7 +124,7 @@
   <!-- main4 -->
   <div class="item option-premium">
     <div class="inner">
-      <a href="https://agriculture.rakuten.co.jp/farm/app/contractField/crops/022002/farmers/2192/?l-id=top-small_stick-tokunaga">
+      <a href="#">
         <div class="item-separate-1">
           <div class="cropsImg">
             <img src="https://agriculture.rakuten.co.jp/farm/assets/crops/img/022/002_1242x702.jpg" alt="ブロッコリー界の王子「スティックセニョール」">
@@ -156,7 +156,7 @@
         </div>
       </a>
       <div class="optionLink">
-        <a href="https://agriculture.rakuten.co.jp/farm/app/contractField/crops/022002/farmers/2191/?l-id=top-small-option_stick-tokunaga">通常：1,940円/8袋前後はこちら＞</a>
+        <a href="#">通常：1,940円/8袋前後はこちら＞</a>
       </div>
     </div>
   </div>
