--- a/app/views/devise/registrations/edit.html.erb
+++ b/app/views/devise/registrations/edit.html.erb
@@ -3,39 +3,39 @@
     <div class="row">
       <div class="col-lg-6 col-lg-offset-3 col-md-6 col-md-offset-3
         col-xs-12 col-sm-12 jumbotron">
-        <h2 class="text-center">Change Password</h2>
+        <h2 class="text-center"><%= t "user.change_password.title" %></h2>
         <%= form_for resource, as: resource_name,
           url: registration_path(resource_name), html: {method: :put} do |f| %>
           <%= devise_error_messages! %>
 
           <div class="field">
-            <%= f.label :current_password, "Old Password" %><br />
+            <%= f.label :current_password, t("user.change_password.current_password") %><br />
             <%= f.password_field :current_password, autofocus: true,
-              autocomplete: "off", placeholder: "Enter your old password",
+              autocomplete: "off", placeholder: t("user.change_password.current_password_placeholder"),
               class: "form-control"  %>
           </div>
 
           <div class="field">
-            <%= f.label :password, "New Password" %><br />
+            <%= f.label :password, t("user.change_password.new_password") %><br />
             <%= f.password_field :password, autocomplete: "off",
-              placeholder: "Enter your new password", class: "form-control" %>
+              placeholder: t("user.change_password.new_password_placeholder"), class: "form-control" %>
           </div>
 
           <div class="field">
-            <%= f.label :password_confirmation %><br />
+            <%= f.label :password_confirmation, t("user.change_password.password_confirmation")%><br />
             <%= f.password_field :password_confirmation, autocomplete: "off",
-              placeholder: "Enter your password confirmation",
+              placeholder: t("user.change_password.password_confirmation_placeholder"),
               class: "form-control" %>
           </div>
 
           <div class="actions">
-            <%= f.button "Change Password", class: "btn btn-block btn-primary",
+            <%= f.button t("user.change_password.button_change"), class: "btn btn-block btn-primary",
               data: {disable_with: "<i class='fa fa-spinner fa-spin'></i>
               Changing..."} %>
           </div>
           <hr>
         <% end %>
-        <%= link_to "Back", :back, class: "btn btn-default" %>
+        <%= link_to t("user.change_password.back"), :back, class: "btn btn-default" %>
       </div>
     </div>
   </div>
