--- a/app/views/pages/_about_web.html.erb
+++ b/app/views/pages/_about_web.html.erb
@@ -1,5 +1,5 @@
 <div class="w3-white w3-margin">
-  <div class="w3-green">
+  <div class="w3-green" style="border-radius: 30px">
     <%= image_tag("icon.png")%>
   </div>
   <div class="w3-container w3-black">
