--- a/app/views/pages/_small_pack_favorite.html.erb
+++ b/app/views/pages/_small_pack_favorite.html.erb
@@ -2,7 +2,7 @@
   <!-- main 1 -->
   <div class="item">
     <div class="inner">
-      <a href="https://agriculture.rakuten.co.jp/farm/app/contractField/crops/020002/farmers/2149/?l-id=top-small_annoimo-yano">
+      <a href="#">
         <div class="item-separate-1">
           <div class="cropsImg">
             <img src="https://agriculture.rakuten.co.jp/farm/assets/crops/img/020/002_1242x702.jpg" alt="クリーミーな甘さが癖になる「安納芋」">
@@ -34,7 +34,7 @@
         </div>
       </a>
       <div class="optionLink">
-        <a href="https://agriculture.rakuten.co.jp/farm/app/contractField/crops/020002/farmers/2077/?l-id=top-small-option_annoimo-yano">通常：3,800円/8㎏前後はこちら＞</a>
+        <a href="#">通常：3,800円/8㎏前後はこちら＞</a>
       </div>
     </div>
   </div>
@@ -42,7 +42,7 @@
   <!-- main2 -->
   <div class="item">
     <div class="inner">
-      <a href="https://agriculture.rakuten.co.jp/farm/app/contractField/crops/033002/farmers/2153/?l-id=top-small_manganji-yano">
+      <a href="#">
         <div class="item-separate-1">
           <div class="cropsImg">
             <img src="https://agriculture.rakuten.co.jp/farm/assets/crops/img/033/002_1242x702.jpg" alt="成長の早い夏野菜、肉厚な「万願寺とうがらし」">
@@ -76,7 +76,7 @@
         </div>
       </a>
       <div class="optionLink">
-        <a href="https://agriculture.rakuten.co.jp/farm/app/contractField/crops/033002/farmers/2086/?l-id=top-small-option_manganji-yano">通常：1,700円/8袋前後はこちら＞</a>
+        <a href="#">通常：1,700円/8袋前後はこちら＞</a>
       </div>
     </div>
   </div>
@@ -84,7 +84,7 @@
   <!-- main3 -->
   <div class="item">
     <div class="inner">
-      <a href="https://agriculture.rakuten.co.jp/farm/app/contractField/crops/031003/farmers/2155/?l-id=top-small_shironasu-nishioka">
+      <a href="#">
         <div class="item-separate-1">
           <div class="cropsImg">
             <img src="https://agriculture.rakuten.co.jp/farm/assets/crops/img/031/005_1242x702.jpg" alt="トロっとした果肉がたまらない「純白なす」">
@@ -118,7 +118,7 @@
         </div>
       </a>
       <div class="optionLink">
-        <a href="https://agriculture.rakuten.co.jp/farm/app/contractField/crops/031003/farmers/2107/?l-id=top-small-option_shironasu-nishioka">通常：1,950円/4袋前後はこちら＞</a>
+        <a href="#">通常：1,950円/4袋前後はこちら＞</a>
       </div>
     </div>
   </div>
@@ -126,7 +126,7 @@
   <!-- main4 -->
   <div class="item">
     <div class="inner">
-      <a href="https://agriculture.rakuten.co.jp/farm/app/contractField/crops/031001/farmers/2152/?l-id=top-small_zucchini-nishioka">
+      <a href="#">
         <div class="item-separate-1">
           <div class="cropsImg">
             <img src="https://agriculture.rakuten.co.jp/farm/assets/crops/img/031/001_1242x702.jpg" alt="農薬・化学肥料不使用で栽培する「なす」">
@@ -160,7 +160,7 @@
         </div>
       </a>
       <div class="optionLink">
-        <a href="https://agriculture.rakuten.co.jp/farm/app/contractField/crops/031001/farmers/2096/?l-id=top-small-option_nasu-matsuzaki">通常：1,700円/4袋前後はこちら＞</a>
+        <a href="#">通常：1,700円/4袋前後はこちら＞</a>
       </div>
     </div>
   </div>
