--- a/app/views/users/show.html.erb
+++ b/app/views/users/show.html.erb
@@ -34,8 +34,8 @@
         </div>
         <% if current_user == @user %>
           <hr>
-          <%= link_to "Change information", edit_user_path %>
-          <%= link_to "Change password", edit_user_registration_path %>
+          <%= link_to t("user.change_information.title"), edit_user_path %>
+          <%= link_to t("user.change_password.title"), edit_user_registration_path %>
         <% end %>
         <div class="clearfix"></div>
       </div>
